kube-promatheus/dashboard-ingres.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - zemuldo'
spec:
  tls:
  - hosts:
    - k8s-grafana.zemuldo.com
    secretName: k8s-grafana-tls
  rules:
  - host: k8s-grafana.zemuldo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
